# gitignore-find

./: .actrc  .envrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  tarpaulin.toml
.github/actions/act-rustup/: action.yml
.github/workflows/: CI.yml  coverage.yml  release.yml
benches/: bench_find.rs
src/: lib.rs
